--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <!-- ----------------- < SEARCH > ------------------------ -->
                     <div class="col-md-2">
                         <div class="search-bar px14">
-                            <input type="search" placeholder="SEARCH">
+                            <input type="text" placeholder="SEARCH">
                         </div>
                     </div>
 
@@ -119,9 +119,6 @@
 
                 </div>
             </div>
-
-            <div class="line"></div>
-
         </div>
         <!-- ----------------- < TEAM > ------------------------ -->
         <div class="team">
@@ -247,11 +244,13 @@
                             <div class="lovely-text bold px18">PARTNERSHIP GUIDLINES</div>
                         </div>
                     </div>
+                </div>
 
-                <div class="lovely-button bold px14">SHOW ME MORE</div>
+                <div class="button-row">
+                    <div class="lovely-button bold px14">SHOW ME MORE</div>
+                </div>
 
             </div>
-        </div>
         </div>
         <!-- ----------------- < WHAT > ------------------------ -->
         <div class="what">
@@ -390,13 +389,31 @@
                     </div>
                     
                     <div class="col-md-2">
-                        <ul>
-                            <li><a href="" class="linkedin"></a></li>
-                            <li><a href="" class="be"></a></li>
-                            <li><a href="" class="skype"></a></li>
-                            <li><a href="" class="facebook"></a></li>
-                            <li><a href="" class="twitter"></a></li>
-                        </ul>
+
+                        <div class="footer-row">
+
+                            <div class="footer-col">
+                                <a href="" class="linkedin"></a>
+                            </div>
+
+                            <div class="footer-col">
+                                <a href="" class="be"></a>
+                            </div>
+
+                            <div class="footer-col">
+                                <a href="" class="skype"></a>
+                            </div>
+
+                            <div class="footer-col">
+                                <a href="" class="facebook"></a>
+                            </div>
+
+                            <div class="footer-col">
+                                <a href="" class="twitter"></a>
+                            </div>
+
+                        </div>
+                        
                     </div>
 
                 </div>
